--- a/src/index.css
+++ b/src/index.css
@@ -251,8 +251,9 @@ footer {
 
 .open-modal {
   font-family: poppins;
+  font-weight: bold;
   padding: 12px;
-  background-color: blueviolet;
+  background-color: rgb(238, 238, 22);
   border: none;
   border-radius: 8px;
 }
